<resources>
    <string name="app_name">ONLIGHT-Project</string>
    <string name="on_light_dashboard">Dashboard</string>
    <string name="feature_one">Solar Energy</string>
    <string name="feature_two">ON / OFF</string>
    <string name="feature_three">Monitoring streets</string>
    <string name="feature_four">Check Damage</string>
    <string name="feature_five">Observe Houses</string>
    <string name="feature_six">Settings</string>
    <string name="sign_up_title" translatable="false">Sign Up</string>

    <string name="next_btn" translatable="false">Next</string>
    <string name="login_tx">login</string>
    <string name="admin_login">Admin Login</string>
    <string name="manger_name">Manager Name</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="id_manager">ID-Manager</string>
    <string name="synchronization">Synchronization</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="on_modify">ON</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_settings">Settings</string>
    <string name="string_editProfile">Edit profile</string>
    <string name="string_mode">Mode</string>
    <string name="string_language">Language</string>
    <string name="string_logout">Logout</string>
    <string name="string_deleteAccount">Delete account</string>
    <string name="string_personName">Person Name</string>
    <string name="string_hint_yourName">Your Name</string>
    <string name="string_hint_password">User Id</string>
    <string name="string_hint_phoneNumber">Phone Number</string>
    <string name="string_hint_city">City</string>
    <string name="string_btn_save">Save</string>
    <string name="string_arabic_value">Arabic</string>
    <string name="string_english_value">English</string>
    <string name="string_darkMode_value">Dark Mode</string>
    <string name="string_description_modeActivity">Light mode is the default</string>
    <string name="monitoring_streets">Monitoring streets</string>
    <string name="dash_board">Dash Board</string>
    <string name="house_s_kareem_emad">House\'s Kareem Emad</string>
    <string name="dark_mode">Dark Mode.</string>
    <string name="light_mode">Light Mode.</string>
    <string name="house_s_mohamed_hamza">House\'s Mohamed Hamza</string>
    <string name="not_available_right_now">Not available right now!</string>
    <string name="house_s_amira_ibrahim">House\'s Amira Ibrahim</string>
    <string name="house_s_farah_gado">House\'s Farah Gado</string>
    <string name="house_s_mustafa_maher">House\'s Mustafa Maher</string>
    <string name="house_s_omar_magdy">House\'s Omar Magdy</string>
    <string name="compound_street">Compound Street</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="current_off">Current OFF</string>
    <string name="turning_lights_houses_on_off_just_one_click">Turning lights\' houses on/off just one click.</string>

</resources>