<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".modeActivity">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    app:titleTextColor="@color/white"
    app:title="@string/string_mode"
    app:navigationIcon="@drawable/ic_arrow_back"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="#000000" />

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawableStart="@drawable/ic_baseline_dark_mode_24"
    android:drawablePadding="8dp"
    android:padding="5dp"
    android:paddingBottom="30dp"
    android:text=" "
    />

<View
    android:id="@+id/divider5"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="?android:attr/listDivider" />

<Switch
    android:id="@+id/switch1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:text="@string/string_darkMode_value"


    android:textSize="18dp" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"


    android:text="@string/string_description_modeActivity" />
</LinearLayout>