<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context=".SettingsActivity" >
<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    app:titleTextColor="@color/white"
    app:title="@string/string_settings"
    app:navigationIcon="@drawable/ic_arrow_back"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="#000000" />

<com.google.android.material.appbar.AppBarLayout
    android:layout_marginTop="55dp"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="@color/fateh_yellow"
        app:expandedTitleMarginBottom="10dp"
        app:expandedTitleMarginStart="10dp"
        app:expandedTitleMarginTop="10dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">



            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/setting2" />


        </LinearLayout>


    </com.google.android.material.appbar.CollapsingToolbarLayout>
</com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:orientation="vertical" >


        <TextView
            android:id="@+id/setting_editProfile_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableStart="@drawable/ic_edit"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:fontFamily="@font/janna"
            android:text="@string/string_editProfile"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/setting_mode_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_dark_mode_24"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:fontFamily="@font/janna"
            android:text="@string/string_mode"
            android:textSize="16sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/setting_language_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_language_24"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:fontFamily="@font/janna"
            android:text="@string/string_language"
            android:textSize="16sp" />
        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
        <TextView
            android:id="@+id/setting_logout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_delete_24"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:fontFamily="@font/janna"
            android:text="@string/string_deleteAccount"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>